# argus

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  client.py  pyproject.toml
app/: config.py  main.py  models.py
app/routers/: chat.py  notes.py
app/utils/: tools.py
src/argus/: config.py  main.py
src/argus/api/v1/: __init__.py  _chat.py
src/argus/api/v1/model/: chat.py
src/argus/exception/: __init__.py  tool_not_found.py
src/argus/llm/: __init__.py  generation.py
src/argus/tools/: __init__.py  registry.py  tool.py
src/argus/tools/_implementations/: __init__.py  _get_datetime.py  _get_weather.py  base_registry.py
tests/: conftest.py  test_main.py
tests/api/: conftest.py
tests/api/v1/: test_chat.py  test_main.py
tests/chat/: test_chat.py
ui/: entrypoint.py  qa.py
